--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Terraform files & directories to ignore
 *.tfstate
+*.tfstate.backup
+*.tfvars
+
+# Local Terraform working dir
+.terraform/
+
+# Crash logs
+crash.log
+
+# Sensitive override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
