--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,8 +31,8 @@ jobs:
         with:
           terraform_version: 1.8.3
 
-      - name: Terraform Format
-        run: terraform fmt -check
+     # - name: Terraform Format
+      #  run: terraform fmt -check
 
       - name: Terraform Init
         run: terraform init
